hphp/hack/test/typecheck/vec_or_dict1.php
<?hh

function tk(dict<arraykey, int> $v): vec_or_dict<string, int> {
  return $v;
}

function tv(dict<arraykey, int> $v): vec_or_dict<string> {
  return $v;
}
